--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8d65a2">  <td>23/04/22 15:06:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.LoginTest@181e731e]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@279566689</td>   <td></td> </tr>
-<tr bgcolor="66c471">  <td>23/04/22 15:06:42</td>   <td>3118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.test1()[pri:0, instance:testcases.LoginTest@181e731e]">test1</td> 
-  <td>main@279566689</td>   <td></td> </tr>
-<tr bgcolor="8d65a2">  <td>23/04/22 15:06:58</td>   <td>18341</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.LoginTest@181e731e]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@279566689</td>   <td></td> </tr>
-<tr bgcolor="8d65a2">  <td>23/04/22 15:06:58</td>   <td>18719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.LoginTest@181e731e]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@279566689</td>   <td></td> </tr>
-<tr bgcolor="66c471">  <td>23/04/22 15:07:02</td>   <td>22465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.test2()[pri:0, instance:testcases.LoginTest@181e731e]">test2</td> 
-  <td>main@279566689</td>   <td></td> </tr>
-<tr bgcolor="8d65a2">  <td>23/04/22 15:07:13</td>   <td>33532</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.LoginTest@181e731e]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@279566689</td>   <td></td> </tr>
+<tr bgcolor="d5a580">  <td>23/04/25 08:35:46</td>   <td>0</td> <td title="&gt;&gt;BaseClass.ReportSetup()[pri:0, instance:testcases.LoginTest@6c4980d3]">&gt;&gt;ReportSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@341372316</td>   <td></td> </tr>
+<tr bgcolor="d5a580">  <td>23/04/25 08:35:46</td>   <td>335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.LoginTest@6c4980d3]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@341372316</td>   <td></td> </tr>
+<tr bgcolor="8766a7">  <td>23/04/25 08:35:48</td>   <td>2747</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.test4()[pri:4, instance:testcases.LoginTest@6c4980d3]">test4</td> 
+  <td>main@341372316</td>   <td></td> </tr>
+<tr bgcolor="d5a580">  <td>23/04/25 08:36:03</td>   <td>17462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.LoginTest@6c4980d3]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@341372316</td>   <td></td> </tr>
+<tr bgcolor="d5a580">  <td>23/04/25 08:36:04</td>   <td>17850</td> <td title="&lt;&lt;BaseClass.ReportClean()[pri:0, instance:testcases.LoginTest@6c4980d3]">&lt;&lt;ReportClean</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@341372316</td>   <td></td> </tr>
 </table>
